Fix image width on mobile. Still need to tweak height.

--- a/firefox/static/css/ff-style.scss
+++ b/firefox/static/css/ff-style.scss
@@ -72,6 +72,10 @@ $narrowfont: 'Pragati Narrow', 'Arial Narrow', 'Helvetica Condensed', Arial, Hel
     p:empty {
       display: none;
     }
+
+    img {
+      max-width: 100% !important;
+    }
   }
 
   .post-img, .post-reveal, .post-image, figure {
